[project]
name = "rag-cli"
version = "0.1.0"
description = "Terminal RAG client using OpenAI vector stores and Responses API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.90.0",
]

[project.scripts]
rag-cli = "rag_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
